--- a/package.json
+++ b/package.json
@@ -1,22 +1,25 @@
 {
-  "name": "my-favorite-food",
+  "name": "marta-favorite-food",
   "version": "1.0.0",
-  "description": "",
+  "description": "marta",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Marta-asturias/my-favorite-food.git"
+    "url": "git+https://github.com/Marta-asturias/marta-favorite-food.git"
   },
   "author": "marta",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Marta-asturias/my-favorite-food/issues"
+    "url": "https://github.com/Marta-asturias/marta-favorite-food/issues"
   },
-  "homepage": "https://github.com/Marta-asturias/my-favorite-food#readme",
+  "homepage": "https://github.com/Marta-asturias/marta-favorite-food#readme",
   "dependencies": {
     "bootstrap": "^5.1.3"
+  },
+  "devDependencies": {
+    "sass": "^1.51.0"
   }
 }
